--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -2,6 +2,16 @@
 <dom-module id="shared-styles">
   <template>
     <style>
+      body {
+        background: #fafafa;
+        font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        color: #444;
+      }
+
+      h1, h2, h3, h4, h5, h6 {
+        font-weight: 300;
+      }
+
       ::shadow ::-webkit-scrollbar {
         width: 5px;
         height: 5px;
