--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,15 +1,4 @@
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <link rel="import" href="../bower_components/polymer/polymer.html">
-
 <link rel="import" href="../bower_components/font-roboto/roboto.html">
 
 <!-- Iron elements -->
@@ -80,26 +69,28 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
 
-<!-- Add your elements here -->
+<!-- Styles -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
 
-<link rel="import" href="components/pa-search.html">
-<link rel="import" href="components/pa-simple-grid.html">
-<link rel="import" href="components/pa-widget-title.html">
+<!-- Common Elements -->
+<link rel="import" href="common/pa-menu/pa-menu.html">
+<link rel="import" href="common/pa-pages.html">
+<link rel="import" href="common/pa-search.html">
+<link rel="import" href="common/pa-simple-grid.html">
+<link rel="import" href="common/pa-page-title.html">
+<link rel="import" href="common/pa-auth/pa-auth-data.html">
+<link rel="import" href="common/pa-auth/pa-auth-info.html">
+<link rel="import" href="common/pa-footer.html">
+<link rel="import" href="common/pa-widgets/pa-widgets.html">
 
-<link rel="import" href="pages/pa-charts.html">
-<link rel="import" href="pages/pa-dashboard.html">
-<link rel="import" href="pages/pa-form-elements.html">
-<link rel="import" href="pages/pa-maps.html">
-<link rel="import" href="pages/pa-tables.html">
-<link rel="import" href="pages/pa-page-buttons.html">
-<link rel="import" href="pages/pa-ui-other.html">
-<link rel="import" href="pages/pa-typo.html">
-<link rel="import" href="pages/pa-user-profile.html">
-
-<link rel="import" href="components/auth/pa-auth-data.html">
-<link rel="import" href="components/auth/pa-auth-info.html">
-
-<link rel="import" href="components/pa-footer.html">
-<link rel="import" href="widgets/pa-about.html">
+<!-- Pages -->
+<link rel="import" href="pages/pa-charts/pa-charts.html">
+<link rel="import" href="pages/pa-dashboard/pa-dashboard.html">
+<link rel="import" href="pages/pa-form-elements/pa-form-elements.html">
+<link rel="import" href="pages/pa-maps/pa-maps.html">
+<link rel="import" href="pages/pa-tables/pa-tables.html">
+<link rel="import" href="pages/pa-buttons/pa-buttons.html">
+<link rel="import" href="pages/pa-ui-other/pa-ui-other.html">
+<link rel="import" href="pages/pa-typo/pa-typo.html">
+<link rel="import" href="pages/pa-profile/pa-profile.html">
