--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -1,38 +1,17 @@
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <style is="custom-style">
-
-  /*
-   Polymer includes a shim for CSS Custom Properties that we can use for application theming.
-   Below, you'll find the default palette for the Polymer Starter Kit layout. Feel free to play
-   with changing the colors used or generate your own palette of colours at MaterialPalette.com.
-
-   See https://www.polymer-project.org/1.0/docs/devguide/styling.html#xscope-styling-details
-   for further information on custom CSS properties.
-   */
-
   /* Application theme */
-
   :root {
     --dark-primary-color: #303F9F;
     --default-primary-color: #3F51B5;
-    --light-primary-color: #C5CAE9;
-    --text-primary-color: #ffffff; /*text/icons*/
+    --text-primary-color: #ffffff;
     --accent-color: #FF4081;
-    --primary-background-color: #c5cae9;
     --primary-text-color: #212121;
     --secondary-text-color: #727272;
     --disabled-text-color: #bdbdbd;
     --divider-color: #B6B6B6;
     --default-text-color: #444444;
+    --default-icon-color: #7f7f7f;
+    --default-icon-selected: #97A1D7;
 
     /* Components */
 
@@ -40,94 +19,26 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --drawer-menu-color: #ffffff;
     --drawer-border-color: 1px solid #ccc;
     --drawer-toolbar-border-color: 1px solid rgba(0, 0, 0, 0.22);
+    --drawer-submenu-background: #efefef;
 
     /* paper-menu */
     --paper-menu-background-color: #fff;
     --menu-link-color: #111111;
   }
 
+  /* General styles */
+
   .top-toolbar {
     box-shadow: 0 2px 5px rgba(0,0,0,0.26);
   }
 
-  /* General styles */
   paper-scroll-header-panel {
     height: 100%;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.12);
   }
 
-  paper-menu iron-icon {
-    margin-right: 33px;
-    opacity: 0.54;
-  }
-
-  .paper-menu > .iron-selected {
-    color: var(--default-primary-color);
-  }
-
-  paper-menu a {
-    text-decoration: none;
-    color: var(--menu-link-color);
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -ms-flex-direction: row;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-    font-family: 'Roboto', 'Noto', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
-    min-height: 48px;
-    padding: 0 16px;
-  }
-
-  paper-menu a[hide] {
-    display: none;
-  }
-
   .toggle-drawer {
     margin-left: 16px;
-  }
-
-  #drawer a {
-    width: 255px;
-    white-space: nowrap;
-    box-sizing: border-box;
-  }
-
-  #drawer paper-submenu paper-item {
-    font-size: 14px;
-    cursor: pointer;
-    outline: none;
-    white-space: nowrap;
-    width: 255px;
-    box-sizing: border-box;
-    @apply(--layout);
-    @apply(--layout-horizontal);
-  }
-
-  #drawer paper-submenu .arow-down {
-    margin-right: 0;
-  }
-
-  #drawer paper-submenu paper-menu {
-    background: #efefef;
-    padding: 0;
-    height: 0;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease-in-out;
-  }
-
-  #drawer paper-submenu .submenu-expanded + paper-menu {
-    height: auto;
-    max-height: 300px;
   }
 
   .refresh-icon {
@@ -146,14 +57,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
   }
 
-  iron-pages {
-    padding: 24px 16px 56px;
-    min-height: 100%;
-    box-sizing: border-box;
-  }
-
   h1 a {
-    color: #ffffff;
+    color: var(--text-primary-color);
     text-decoration: none;
   }
 
@@ -163,53 +68,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       border-right: 1px solid rgba(0, 0, 0, 0.14);
     }
   }
-
-  /* Desktop + */
-  @media (min-width: 640px) {
-    iron-pages {
-      padding: 24px 36px 56px;
-    }
-  }
-
-  /* Material Design Adaptive Breakpoints */
-  /*
-    Below you'll find CSS media queries based on the breakpoint guidance
-    published by the Material Design team. You can choose to use, customise
-    or remove these breakpoints based on your needs.
-
-    http://www.google.com/design/spec/layout/adaptive-ui.html#adaptive-ui-breakpoints
-   */
-
-  /* mobile-small */
-  @media all and (min-width: 0) and (max-width: 360px) and (orientation: portrait) { }
-  /* mobile-large */
-  @media all and (min-width: 361px) and (orientation: portrait) { }
-  /* mobile-small-landscape */
-  @media all and (min-width: 0) and (max-width: 480px) and (orientation: landscape) { }
-  /* mobile-large-landscape */
-  @media all and (min-width: 481px) and (orientation: landscape) { }
-  /* tablet-small-landscape */
-  @media all and (min-width: 600px) and (max-width: 960px) and (orientation: landscape) { }
-  /* tablet-large-landscape */
-  @media all and (min-width: 961px) and (orientation: landscape) { }
-  /* tablet-small */
-  @media all and (min-width: 600px) and (orientation: portrait) { }
-  /* tablet-large */
-  @media all and (min-width: 601px) and (max-width: 840px) and (orientation : portrait) { }
-  /* desktop-x-small-landscape */
-  @media all and (min-width: 0) and (max-width: 480px) and (orientation: landscape) { }
-  /* desktop-x-small */
-  @media all and (min-width: 0) and (max-width: 480px) and (max-aspect-ratio: 4/3) { }
-  /* desktop-small-landscape */
-  @media all and (min-width: 481px) and (max-width: 840px) and (orientation: landscape) { }
-  /* desktop-small */
-  @media all and (min-width: 481px) and (max-width: 840px) and (max-aspect-ratio: 4/3) { }
-  /* desktop-medium-landscape */
-  @media all and (min-width: 841px) and (max-width: 1280px) and (orientation: landscape) { }
-  /* desktop-medium */
-  @media all and (min-width: 841px) and (max-width: 1280px) and (max-aspect-ratio: 4/3) { }
-  /* desktop-large */
-  @media all and (min-width: 1281px) and (max-width: 1600px) { }
-  /* desktop-xlarge */
-  @media all and (min-width: 1601px) and (max-width: 1920px) { }
 </style>
