feat(404 page, favicon): add 404 page, change favicon, refactoring

--- a/app/elements/common/pa-pages.html
+++ b/app/elements/common/pa-pages.html
@@ -62,6 +62,11 @@
         <pa-profile cols='{{cols}}' profile="{{profile}}"></pa-profile>
       </section>
 
+      <section data-route="not-found">
+        <pa-page-title title="Page Not Found"></pa-page-title>
+        <pa-not-found></pa-not-found>
+      </section>
+
     </iron-pages>
   </template>
 
