--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -60,12 +60,6 @@
 <link rel="import" href="../bower_components/gold-email-input/gold-email-input.html">
 <link rel="import" href="../bower_components/gold-phone-input/gold-phone-input.html">
 
-<!-- Uncomment next block to enable Service Worker Support (2/2) -->
-
-<!--<link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
-<link rel="import" href="../bower_components/platinum-sw/platinum-sw-register.html">-->
-
-
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
 
@@ -74,7 +68,7 @@
 <link rel="import" href="../styles/shared-styles.html">
 
 <!-- Common Elements -->
-<link rel="import" href="common/pa-menu/pa-menu.html">
+<link rel="import" href="common/pa-menu.html">
 <link rel="import" href="common/pa-pages.html">
 <link rel="import" href="common/pa-search.html">
 <link rel="import" href="common/pa-simple-grid.html">
@@ -94,3 +88,4 @@
 <link rel="import" href="pages/pa-ui-other/pa-ui-other.html">
 <link rel="import" href="pages/pa-typo/pa-typo.html">
 <link rel="import" href="pages/pa-profile/pa-profile.html">
+<link rel="import" href="pages/pa-not-found/pa-not-found.html">
