feat(release version): change release version to contain minimun amount of files with minimum weight

--- a/app/elements/pages/pa-maps/widgets/pa-leaflet.html
+++ b/app/elements/pages/pa-maps/widgets/pa-leaflet.html
@@ -27,7 +27,7 @@
         loadLeaflet: function() {
           var map = L.map('leaflet-map').setView([51.505, -0.09], 13);
 
-          L.Icon.Default.imagePath = '../../../bower_components/leaflet/dist/images';
+          L.Icon.Default.imagePath = 'images/leaflet/';
 
           L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
