--- a/app/elements/pages/pa-profile/pa-profile-picture.html
+++ b/app/elements/pages/pa-profile/pa-profile-picture.html
@@ -37,12 +37,12 @@
       }
 
       paper-icon-button {
+        --iron-icon-height: 24px;
+        --iron-icon-width: 24px;
         display: none;
         position: absolute;
         top: -8px;
         right: -8px;
-        --iron-icon-height: 24px;
-        --iron-icon-width: 24px;
       }
 
       .userpic:hover span, .userpic:hover paper-icon-button{
@@ -111,7 +111,7 @@
 
           defaultPicture: {
             type: String,
-            value: 'elements/pages/pa-profile/img/no-photo.jpg'
+            value: '../images/no-photo.jpg'
           }
         },
 
