--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
 
       <paper-scroll-header-panel drawer>
 
-        <pa-menu route="{{route}}"></pa-menu>
+        <pa-menu route="{{route}}" user="{{user}}"></pa-menu>
 
       </paper-scroll-header-panel>
 
