feat(readme): add README

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,8 @@
   <!-- Tile icon for Win8 (144x144) -->
   <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
 
+  <link rel="stylesheet" href="../bower_components/leaflet/dist/leaflet.css">
+
   <!-- build:js bower_components/webcomponentsjs/webcomponents-lite.min.js -->
   <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <!-- endbuild -->
@@ -82,6 +84,7 @@
 
 <!-- build:js scripts/app.js -->
 <script src="scripts/app.js"></script>
+<script src="../bower_components/leaflet/dist/leaflet-src.js"></script>
 <!-- endbuild-->
 </body>
 </html>
