--- a/app/elements/pages/pa-dashboard/widgets/pa-todo/pa-todo.html
+++ b/app/elements/pages/pa-dashboard/widgets/pa-todo/pa-todo.html
@@ -32,7 +32,7 @@
     </style>
 
     <div class="sign-in-msg" show$="{{!user}}">
-      <p><iron-icon icon="info-outline"></iron-icon>This app is using Firebase to store data. Please, sign in to use ToDo list.</p>
+      <p><iron-icon icon="info-outline"></iron-icon>This app is using Firebase to store data. Please, sign in with your Google account to use ToDo list.</p>
       <paper-button raised class="colorful" on-click="signInClick">Sign in</paper-button>
     </div>
     <div class="todo-block" show$="{{user}}">
