--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,7 @@
 
       <paper-scroll-header-panel main>
 
-        <pa-pages route="{{route}}" user="{{user}}" profile='{{profile}}' todos="{{todos}}"></pa-pages>
+        <pa-pages route="{{route}}" user="{{user}}" profile='{{profile}}' todos="{{todos}}" on-sign-in="signIn"></pa-pages>
 
         <pa-footer></pa-footer>
       </paper-scroll-header-panel>
