--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -28,6 +28,17 @@
 
   /* General styles */
 
+  paper-toolbar h1 {
+    font-size: 32px;
+    white-space: nowrap;
+  }
+
+  @media (max-width: 500px) {
+    paper-toolbar h1 {
+      font-size: 26px;
+    }
+  }
+
   .top-toolbar {
     box-shadow: 0 2px 5px rgba(0,0,0,0.26);
   }
